2002-07-??    (Parrot 0.0.7)

	* Initial CVS revision, modified from "V.00I_0I" on
	  perl6-internals.
	* Patches: (John Kingsley)
	    - squashed a warning in maybe_comma
	    - empty statements
	    - "foo::bar()" being treated as a label, "foo:".
	    - reset parser state between multiple parses.

2002-07-21

	* Additions:
	    - anonymous subs (requires hacked IMCC)
	    - implicit parameters (e.g. "$^a") (requires hacked IMCC)
	    - hyper-concatenation ("^_")
	    - perl-y functions: print, warn, die, exit
	    - loop
	    - foreach
	    - global variables (requires hacked IMCC)
	    - assignment to array slices

	* Fixes:
	    - misc context / flattening fixes.
	    - tests stop on SIGINT
	    - want-rule for no-arg prototypes
	    - reorg: moved some val() functions from IMCC.pm to IMCC/*.pm,
	      to be loaded with SelfLoader when needed.  Trying to cut
	      down startup time.
	    - needed to be cloning PMC's instead of just setting
	    - syntax in TestCompiler.pm

	* Test-failures:
	    - foreach 1 (register clobbering)
	    - foreach 2 (maybe register clobbering)

2002-07-23

	* Additions:
	    - try { ... } and CATCH { ... } (via the amazing callcc!)

	* Fixes:
	    - Changes to work with 5.005_03 (thanks Leopold Toetsch):
		- remove the naughty word 'our'
		- remove lvalue sub 'code'
		- remove /x modifier from qr regexen in Parser.pm -- 5.005
		  doesn't handle them correctly.
	    - appropriate use of clone to avoid nasty aliasing.

	* Test-failures:
	    - 5.5 (flattening) --  Currently under investigation.
	    - qsort.t -- I suspect funky spilling, but also under
	      investigation.

2002-07-23-B

	* Additions:
	    - test for increment.

	* Fixes:
	    - get cloning right.
	    - use Test::Harness instead of shell to glob tests

	* Test-failures:
	    - with the right version of IMCC, all compiler tests pass!
	    - (parser tests disabled waiting for the error-message patch
	      to stabilize)

2002-07-24

	* Additions: